objects/Specification__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Specifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_email_address__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact email address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_and_Additional_Information__c</fullName>
        <label>Notes and Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Response_Date__c</fullName>
        <inlineHelpText>Date by which you would like the Borrego approver to respond</inlineHelpText>
        <label>Requested Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specs_and_Submittals__c</fullName>
        <label>Specs and Submittals</label>
        <referenceTo>Spec_Submittal__c</referenceTo>
        <relationshipName>Specifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted to PM</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Specification Old</label>
    <nameField>
        <label>Specification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specifications Old</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>